--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.1",
+    "retina-dom-to-image": "^2.5.6",
     "styled-components": "^6.1.8",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
